import { beforeEach, describe, expect, jest } from '@jest/globals';

import {
    type OptionsDefs,
    type ValidatorContext,
    and,
    array,
    arrayOf,
    attachDescription,
    boolean,
    callback,
    constant,
    date,
    greaterThan,
    instanceOf,
    lessThan,
    number,
    object,
    optionsDefs,
    or,
    positiveNumber,
    ratio,
    required,
    string,
    union,
    validate,
} from './validation';

function isValid<T extends object>(options: unknown, defs: OptionsDefs<T>, path?: string): options is T {
    const { errors } = validate(options, defs, path);
    return errors.length === 0;
}

describe('Validation utils', () => {
    const mockContext = (): ValidatorContext => ({ options: {}, path: 'pathTo' });

    beforeEach(() => {
        console.warn = jest.fn();
    });

    describe('Base Validators', () => {
        describe('Primitive type validators', () => {
            test.each([
                [string, 'hello', true],
                [string, 42, false],
                [number, 42, true],
                [number, '42', false],
                [boolean, true, true],
                [boolean, 'false', false],
                [object, {}, true],
                [object, [], false],
                [array, [], true],
                [array, 'not an array', false],
                [date, new Date(), true],
                [date, 'not a date', false],
                [callback, () => {}, true],
                [callback, 'not a function', false],
            ])('%p validates %p as %p', (validator, input, expected) => {
                expect(validator(input, mockContext())).toBe(expected);
            });
        });

        describe('Specialized type validators', () => {
            test.each([
                [positiveNumber, 1, true],
                [positiveNumber, -1, false],
                [ratio, 0.5, true],
                [ratio, -0.1, false],
                [ratio, 1.1, false],
                [lessThan('contextKey'), 4.2, true],
                [lessThan('contextKey'), 420, false],
            ])('%p validates %p as %p', (validator, input, expected) => {
                expect(validator(input, { options: { contextKey: 42 }, path: '' })).toBe(expected);
            });
        });
    });

    describe('Combination Validators', () => {
        const isNonEmptyString = and(string, (value) => value !== '');
        const isStringOrNumber = or(string, number);

        test('and combines validators correctly', () => {
            expect(isNonEmptyString('hello', mockContext())).toBe(true);
            expect(isNonEmptyString('', mockContext())).toBe(false);
            expect(isNonEmptyString(42, mockContext())).toBe(false);
        });

        test('or combines validators correctly', () => {
            expect(isStringOrNumber('hello', mockContext())).toBe(true);
            expect(isStringOrNumber(42, mockContext())).toBe(true);
            expect(isStringOrNumber(true, mockContext())).toBe(false);
        });
    });

    describe('Complex Validators and Validation Function', () => {
        const isNonEmptyString = and(string, (value) => value !== '');
        const userOptionsDef = {
            name: isNonEmptyString,
            age: positiveNumber,
            hobbies: arrayOf(string),
        };

        test('validates complex objects correctly', () => {
            const validUser = { name: 'John', age: 30, hobbies: ['coding', 'reading'] };
            const invalidUser = { name: '', age: 30, hobbies: ['coding', 42] }; // Invalid name and one invalid hobby

            expect(isValid(validUser, userOptionsDef)).toBe(true);
            expect(isValid(invalidUser, userOptionsDef)).toBe(false);
        });
    });

    describe('Utility Functions', () => {
        test('required marks a validator as required', () => {
            expect(isValid<{ value: string }>({ value: '' }, { value: required(string) })).toBe(true);
            expect(isValid<{ value: string }>({ value: undefined }, { value: required(string) })).toBe(false);
        });

        // should check the description in the logger
        test('attachDescription adds a description to a validator', () => {
            const describedValidator = attachDescription(
                (value: unknown, context) => string(value, context) && value !== '',
                'a non-empty string'
            );
            expect(validate<{ str: string }>({ str: '' }, { str: describedValidator }).errors).toMatchSnapshot();
        });
    });

    describe('Union Validator', () => {
        const isRedOrBlue = union('red', 'blue');

        test('validates correctly against multiple allowed values', () => {
            expect(isRedOrBlue('red', mockContext())).toBe(true);
            expect(isRedOrBlue('blue', mockContext())).toBe(true);
            expect(isRedOrBlue('green', mockContext())).toBe(false);
        });
    });

    describe('Constant Validator', () => {
        const isTrue = constant(true);

        test('validates only the exact value', () => {
            expect(isTrue(true, mockContext())).toBe(true);
            expect(isTrue(false, mockContext())).toBe(false);
            expect(isTrue('true', mockContext())).toBe(false);
        });
    });

    describe('InstanceOf Validator', () => {
        class TestClass {}

        const isInstanceOfTestClass = instanceOf(TestClass);

        test('validates instances of the specified class', () => {
            expect(isInstanceOfTestClass(new TestClass(), mockContext())).toBe(true);
            expect(isInstanceOfTestClass({}, mockContext())).toBe(false);
        });
    });

    describe('ArrayOf Validator', () => {
        const isArrayOfStrings = arrayOf(string);

        test('validates arrays where every element passes the given validator', () => {
            expect(isArrayOfStrings(['a', 'b', 'c'], mockContext())).toBe(true);
            expect(isArrayOfStrings(['a', 1, 'c'], mockContext())).toBe(false);
            expect(isArrayOfStrings('not an array', mockContext())).toBe(false);
        });
    });

    describe('OptionsDefs Validator', () => {
        const optionDefsValidator = optionsDefs<{ key1?: string; key2?: number }>({
            key1: string,
            key2: required(number),
        });

        test('validates objects against provided definitions', () => {
            expect(optionDefsValidator({ key1: 'value', key2: 42 }, mockContext())).toBe(true);
            expect(optionDefsValidator({ key1: 'value', key2: 'not a number' }, mockContext())).toBe(false);
        });
    });

    describe('Conditional Validators', () => {
        const axisSchema: OptionsDefs<any> = {
            min: and(number, lessThan('max')),
            max: and(number, greaterThan('min')),
        };

        test('validates axis schema with min and max constraints', () => {
            const validAxis = { min: 0, max: 100 };
            const invalidAxis = { min: 100, max: 0 };

            expect(isValid(validAxis, axisSchema)).toBe(true);
            expect(isValid(invalidAxis, axisSchema)).toBe(false);
        });

        test('validates axis schema with optional min/max', () => {
            expect(isValid({ min: 1000 }, axisSchema)).toBe(true);
            expect(isValid({ max: 100 }, axisSchema)).toBe(true);

            const { valid, errors } = validate({ min: 1000, max: '100' }, axisSchema);
            expect(valid).toEqual({ min: 1000 });
            expect(errors).toMatchSnapshot();
        });
    });

    describe('Main Validation Function', () => {
        const userSchema: OptionsDefs<any> = {
            name: required(string),
            age: and(number, positiveNumber),
            hobbies: arrayOf(string),
            address: {
                street: string,
                city: string,
            },
        };

        test('validates a complex object with nested structures against a schema', () => {
            const validUser = {
                name: 'John Doe',
                age: 30,
                hobbies: ['reading', 'gaming'],
                address: {
                    street: '123 Elm St',
                    city: 'Springfield',
                },
            };

            const invalidUser = {
                age: -5, // positiveNumber failure
                hobbies: ['reading', 123], // arrayOf failure
                address: {
                    street: '123 Elm St',
                },
            };

            expect(isValid(validUser, userSchema)).toBe(true);
            expect(isValid(invalidUser, userSchema)).toBe(false);
        });
    });

    describe('Validate Method', () => {
        const userSchema: OptionsDefs<any> = {
            name: required(string),
            type: string,
            age: positiveNumber,
            hobbies: arrayOf(string),
            address: {
                street: string,
                city: string,
            },
        };

        test('validate returns expected validated object and errors', () => {
            const validUser = {
                name: 'John Doe',
                age: 30,
                hobbies: ['reading', 'gaming'],
                address: {
                    street: '123 Elm St',
                    city: 'Springfield',
                },
            };

            const invalidUser = {
                name: undefined, // Required failure
                age: -5, // positiveNumber failure
                hobbies: ['reading', 123], // arrayOf failure
                address: {
                    street: '123 Elm St',
                    city: '',
                },
                extraField: 'should be ignored', // Unknown option
                typo: 'should suggest fuzzy match', // Unknown option
            };

            const { valid: validatedValidUser, errors: errorsValidUser } = validate(validUser, userSchema);
            const { valid: validatedInvalidUser, errors: errorsInvalidUser } = validate(invalidUser, userSchema);

            expect(validatedValidUser).toEqual(validUser);
            expect(errorsValidUser).toEqual([]);

            expect(validatedInvalidUser).toEqual({
                address: {
                    street: '123 Elm St',
                    city: '',
                },
            });
            expect(errorsInvalidUser).toMatchSnapshot();
        });
    });
});
